force-app/main/default/objects/Round_Robin_Queue_Member__c/Round_Robin_Queue_Member__c.object-meta.xml
<CustomObject>
    <description>Members associated with the round robin queue</description>
    <label>Round Robin Queue Member</label>
    <nameField>
        <displayFormat>RRM{00000}</displayFormat>
        <label>Round Robin Queue Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin Queue Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>