force-app/main/default/objects/Round_Robin_Queue_Member__c/fields/Last_Assignment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment_Date_Time__c</fullName>
    <description>When was the last record assigned to this queue member</description>
    <label>Last Assignment Date/Time</label>
    <type>DateTime</type>
</CustomField>