force-app/main/default/objects/Round_Robin_Queue_Member__c/fields/Round_Robin_Queue__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Queue__c</fullName>
    <description>Which queue is this member associated to</description>
    <label>Round Robin Queue</label>
    <referenceTo>Round_Robin_Queue__c</referenceTo>
    <relationshipLabel>Round Robin Queue Members</relationshipLabel>
    <relationshipName>Round_Robin_Queue_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>